# uf-ece-masters

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
clib/: compression.c  convertDataTypeLib.c  fileio.c  fileio.h  keyboardLib.c  portOpsLib.c  sendRecMsgLib.c  serial.c  signalLib.c  smLib.c  socket.c  textFileLib.c
cmathlib/: kalman.c  kalman.h  matrix.c  matrix.h  quaternion.c  rk4.c  rk4.h  rotation.c
filterlib/: cCDKF.cpp  cDKF.cpp  cKalmanFilter.cpp  cKalmanFilter.h
mathlib/: cArray.cpp  cBaseMath.cpp  cMLError.cpp  cMathlib.h  cMatrix.cpp  cQuaternion.cpp  cRand.cpp  cRand.h  cRk4.cpp  cRk4.h  cVector.cpp
nav/: nav_filter.cpp  nav_filter.h  navigation.cpp  navigation.h
